...
                                  )
                                ],
                              ),
                              child: Center(
                                child: Text(
                                  key: const Key("gatel"),
                                  "Get Started",
                                  style: GoogleFonts.sora(
                                    fontSize: 14,
                                    fontWeight: FontWeight.w600,
                                    color: Colors.white,
                                  ),
                                ),
...
